# TrainingHall

./: pyproject.toml
.github/workflows/: lint.yml
books/python/Dead_Simple_Python/: pyproject.toml
books/python/Python_Programming_An_Introduction_to_Computer_Science/: README.md  users.json
books/python/Python_Programming_An_Introduction_to_Computer_Science/chapter_10/: button.py  cannon.py  die_view.py  exercises.py  practice.py
books/python/Python_Programming_An_Introduction_to_Computer_Science/chapter_4/: convert_gui.pyw  exercises.pyw  (+2 more)
chapter_10/: cannon.py  roller.py
chapter_10/exercise_material/: 1_diamond.ppm  cbutton.py
chapter_11/exercise_material/: exercise_10.py  exercise_16.py  exercise_19.py  exercise_6.py  exercise_8.py
chapter_11/exercise_material/exercise_11/: exercise_11.py  output.txt
chapter_11/exercise_material/exercise_2/: output_2.txt
chapter_11/practice_material/: gpa.py  output.txt  words.txt
chapter_12/exercise_material/exercise_1/: poker_interface.py
chapter_12/exercise_material/exercise_4/: main.py
chapter_12/practice_material/dice_poker/: main.py
chapter_13/exercise_material/exercise_2/: main.py
chapter_4/: exercises.pyw  graph_interest.py
chapter_5/: exercises.py  output.txt
chapter_5/exercise_material/: exercise_14.txt  exercise_15.txt  exercise_16.txt  input.txt  output.txt
chapter_6/: exercises.py  practice.py
chapter_7/: exercises.py
chapter_8/exercise_material/: exercise_12.txt
src/chapter_5/: assignments.py
src/chapter_6/: dice_roll.py  dicer_roll_recursive.py  fibonacci.py
src/code/: main.py
(+53 files in other folders)
